fixed font size on mobile, still has flexbox issues

--- a/src/App.css
+++ b/src/App.css
@@ -37,19 +37,11 @@ a {
 
 .row {
   display: flex;
+  flex-flow: row wrap;
 }
 
 .column {
   float: left;
-}
-
-.left {
-  width: 30%;
-}
-
-.right {
-  width: 70%;
-  position: relative;
 }
 
 .logo {
@@ -58,8 +50,30 @@ a {
 }
 
 .container {
-  width: 1000px;
+  width: 100%;
   margin: auto;
+}
+
+@media (min-width: 1000px) {
+  /* CSS styles for viewports 1000px and up */
+  .container {
+    width: 1000px;
+    margin: auto;
+  }
+
+  #main-banner {
+    height: 100vh;
+    border-radius: 0 0 15rem 0;
+  }
+
+  .left {
+    width: 30%;
+  }
+
+  .right {
+    width: 70%;
+    position: relative;
+  }
 }
 
 .vertical-line {
@@ -73,13 +87,15 @@ a {
 
 #main-banner {
   width: 100%;
-  height: 100vh;
   padding-top: 0;
   background: linear-gradient(to right, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.3)),
     url(./components/images/banner-bg.jpg);
   background-position: center top;
-  border-radius: 0 0 15rem 0;
   position: relative;
+}
+
+@media (in-width: 1000px) {
+  /* CSS styles for viewports 1000px and up */
 }
 
 #banner-arrow {
